change color, images

--- a/food.html
+++ b/food.html
@@ -86,13 +86,13 @@
     <!-- Custom styles for this template -->
     <link href="blog.css" rel="stylesheet">
   </head>
-  <body>
+  <body style="background-color:#f1f2f3;">
     
 
 
 
 <main class="container">
-  <div class="p-4 p-md-5 mb-4 rounded text-bg-dark">
+  <div class="p-4 p-md-5 mb-4 rounded" style ="background-color:#FFCF01 ;">
     <div class="col-md-6 px-0">
       <h1 class="display-4 fst-italic">식당</h1>
       <p class="lead my-3">맛집 소개: 솔직한 리뷰, 믿을 수 있는 평점</p>
@@ -142,7 +142,7 @@
             <p class="card-text mb-auto">&bigstar;&bigstar;&bigstar;&bigstar;&bigstar;</p>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSyFnkG0TCPDj5f5190oUOpGLM5sf-m4O1XjErrT86ubSUK-LmBHyE_sIDP8xOj5qnEpLU&usqp=CAU" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/></img>
+            <img class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAxOTA0MjZfODYg%2FMDAxNTU2MjY3NTEzODE5.6Pf-0CB1xIJljidIqn5rYnLV5SZ9PgS2kWe0Hv6faK0g.OLv7O9YFmlgH2duT2bjRG8EVBVhvRFDnGGHarlJexjQg.JPEG.tnrua34%2FIMG_0441.JPG&type=sc960_832" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/></img>
   
           </div>
         </div>
@@ -157,7 +157,7 @@
             <p class="card-text mb-auto">&bigstar;&bigstar;&bigstar;&bigstar;&bigstar;</p>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" src="https://mblogthumb-phinf.pstatic.net/MjAyMTA5MDhfMTg5/MDAxNjMxMTA2Nzc5NjYz.-RVIwSmdSjobVTWOuuLPJt7YhWGpgd4hJySXKsfZtyog.Xto7CMyRc_yo5R6oLgswrVXC1pGJiqfTk3LJlMfzxgEg.JPEG.yy0ee0nn/20210907%EF%BC%BF181141.jpg?type=w800" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/></img>
+            <img class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMjEwMDdfODAg%2FMDAxNjY1MDcxNTE4NTgy.x698hWdLKsxJNksUpG7fKZO4H_y4yxD_vboEa0_SA4Yg.VV-4Prw1UR_L4sRajp5C4WgOkbyTJjTxmk-bB58BSWcg.JPEG.kimdoha0717%2FIMG_1002.jpg&type=sc960_832" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/></img>
   
           </div>
         </div>
@@ -187,7 +187,7 @@
             <p class="card-text mb-auto">&bigstar;&bigstar;&bigstar;&bigstar;&bigstar;</p>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" src="https://mblogthumb-phinf.pstatic.net/MjAxOTA0MjRfMjU1/MDAxNTU2MTA3ODY0ODY1.SV9fVzEH1NnT27pdAuRI2Zk-EPl9fxGnf9Wh7lwU9l8g.cVSLndupENZFAiPWV7EmkFaon9mhdwgEhwUdf9mv-Ukg.JPEG.moonjungjang7/20190424_190844.jpg?type=w800" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/></img>
+            <img class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMjA0MDNfMjYg%2FMDAxNjQ4OTU1NTEzODA0.TvJptIHnWuoBKLndBHYhOJm5DKKyktSUWO8pkLewRzsg.GmFG0Gq_ZKJHEHd5V0hjrZOS3PmkjFnxwBdQpMTWUgcg.JPEG.maria5s%2F20220402%25A3%25DF163406.jpg&type=sc960_832" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/></img>
   
           </div>
         </div>
