--- a/food.html
+++ b/food.html
@@ -108,7 +108,7 @@
           <h3 class="mb-0">돼지고기 김치찌개</h3>
           <div class="mb-1 text-muted">충청남도 아산시 신창면 읍내리 579-17</div>
           <p class="card-text mb-auto">돼지고기 김치찌개, 차돌된장찌개, 제육볶음</p>
-          <p class="card-text mb-auto">&bigstar;&bigstar;&bigstar;&bigstar;&bigstar;</p>
+          <p class="card-text mb-auto"  style="color: orange;">&bigstar;&bigstar;&bigstar;&bigstar;&bigstar;</p>
         </div>
         <div class="col-auto d-none d-lg-block">
           <img class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" src="https://blog.kakaocdn.net/dn/ckrVLg/btrlTjZ6FqA/9WXGaEr892koWjEam63zGK/img.jpg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/></img>
@@ -123,7 +123,7 @@
           <h3 class="mb-0">명품족발만족</h3>
           <div class="mb-1 text-muted">충청남도 아산시 신창면 남성리 102-1</div>
           <p class="mb-auto">전통족발, 보쌈, 마늘족발</p>
-          <p class="card-text mb-auto">&bigstar;&bigstar;&bigstar;&bigstar;&bigstar;</p>
+          <p class="card-text mb-auto" style="color: orange;">&bigstar;&bigstar;&bigstar;&bigstar;&bigstar;</p>
         </div>
         <div class="col-auto d-none d-lg-block">
             <img class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" src="https://www.asan.go.kr/food/data/food_img/37c880df_1.jpg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/></img>
@@ -139,7 +139,7 @@
             <h3 class="mb-0">순천지</h3>
             <div class="mb-1 text-muted">충남 아산시 신창면 온천대로 806</div>
             <p class="card-text mb-auto">순살닭찌그리, 돼지찌그리, 섞어찌그리</p>
-            <p class="card-text mb-auto">&bigstar;&bigstar;&bigstar;&bigstar;&bigstar;</p>
+            <p class="card-text mb-auto" style="color: orange;">&bigstar;&bigstar;&bigstar;&bigstar;&bigstar;</p>
           </div>
           <div class="col-auto d-none d-lg-block">
             <img class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAxOTA0MjZfODYg%2FMDAxNTU2MjY3NTEzODE5.6Pf-0CB1xIJljidIqn5rYnLV5SZ9PgS2kWe0Hv6faK0g.OLv7O9YFmlgH2duT2bjRG8EVBVhvRFDnGGHarlJexjQg.JPEG.tnrua34%2FIMG_0441.JPG&type=sc960_832" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/></img>
@@ -154,7 +154,7 @@
             <h3 class="mb-0">마라취웨이</h3>
             <div class="mb-1 text-muted">충남 아산시 신창면 순천향로 29</div>
             <p class="card-text mb-auto">마라탕, 꿔바로우, 마라샹궈</p>
-            <p class="card-text mb-auto">&bigstar;&bigstar;&bigstar;&bigstar;&bigstar;</p>
+            <p class="card-text mb-auto" style="color: orange;">&bigstar;&bigstar;&bigstar;&bigstar;</p>
           </div>
           <div class="col-auto d-none d-lg-block">
             <img class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMjEwMDdfODAg%2FMDAxNjY1MDcxNTE4NTgy.x698hWdLKsxJNksUpG7fKZO4H_y4yxD_vboEa0_SA4Yg.VV-4Prw1UR_L4sRajp5C4WgOkbyTJjTxmk-bB58BSWcg.JPEG.kimdoha0717%2FIMG_1002.jpg&type=sc960_832" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/></img>
@@ -169,7 +169,7 @@
             <h3 class="mb-0">행복한 돈가스</h3>
             <div class="mb-1 text-muted">충남 아산시 신창면 순천향로 25</div>
             <p class="card-text mb-auto">생등심가스, 치즈돈가스, 고구마치즈돈가스</p>
-            <p class="card-text mb-auto">&bigstar;&bigstar;&bigstar;&bigstar;&bigstar;</p>
+            <p class="card-text mb-auto" style="color: orange;">&bigstar;&bigstar;&bigstar;&bigstar;&bigstar;</p>
           </div>
           <div class="col-auto d-none d-lg-block">
             <img class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSY4hIASDz3zmSk1mAlzCXlUyssnkW3bdwo0g&usqp=CAU" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/></img>
@@ -184,7 +184,7 @@
             <h3 class="mb-0">짱닭치킨</h3>
             <div class="mb-1 text-muted">충남 아산시 신창면 순천향로 3</div>
             <p class="card-text mb-auto">크리스피치킨, 양념치킨, 마늘간장치킨</p>
-            <p class="card-text mb-auto">&bigstar;&bigstar;&bigstar;&bigstar;&bigstar;</p>
+            <p class="card-text mb-auto" style="color: orange;">&bigstar;&bigstar;&bigstar;&bigstar;</p>
           </div>
           <div class="col-auto d-none d-lg-block">
             <img class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" src="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMjA0MDNfMjYg%2FMDAxNjQ4OTU1NTEzODA0.TvJptIHnWuoBKLndBHYhOJm5DKKyktSUWO8pkLewRzsg.GmFG0Gq_ZKJHEHd5V0hjrZOS3PmkjFnxwBdQpMTWUgcg.JPEG.maria5s%2F20220402%25A3%25DF163406.jpg&type=sc960_832" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/></img>
