Change container's font, Modify margin-top: 0 -> 20px

--- a/food.html
+++ b/food.html
@@ -92,10 +92,10 @@
 
 
 <main class="container">
-  <div class="p-4 p-md-5 mb-4 rounded" style ="background-color:#FFCF01 ;">
-    <div class="col-md-6 px-0">
-      <h1 class="display-4 fst-italic">식당</h1>
-      <p class="lead my-3">맛집 소개: 솔직한 리뷰, 믿을 수 있는 평점</p>
+  <div class="p-4 p-md-5 mb-4 rounded" style ="background-color:#FFCF01; margin-top: 20px;">
+    <div class="col-md-12 px-0">
+      <h1 class="display-4 fst-normal" style="text-align: center; font-weight:bold;">식당</h1>
+      <p class="lead my-3" style="text-align: center;">맛집 소개: 솔직한 리뷰, 믿을 수 있는 평점</p>
       
     </div>
   </div>
